Fixed horizontal overflow by giving containers with 100vw to also have max-width of 100%

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,6 @@ p {
     background-position: center center;
     background-size: cover;
     height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -56,10 +55,10 @@ p {
     background-color: #00303F;
     position: sticky;
     top: 0;
-    z-index: 3;
+    z-index: 2;
     height: 7.5em;
     width: 100vw;
-    width: 100vw;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;   
@@ -98,17 +97,16 @@ p {
     flex-direction: column;
     justify-content: center;
     height: 78vh;
-    width: 85vw;
+    width: 100vw;
+    max-width: 100%;
     background-color: #CAE4DB;
-    position: absolute;
-    z-index: 1;
-    overflow: auto;
     padding: 0em 6em;
+    overflow: auto;
 }
 
 .biography h2 {
     font-size: 2.25em;
-    font-size: 2.25em;
+    overflow: auto;
 }
 
 .biography p {
@@ -122,7 +120,7 @@ p {
     display: flex;
     align-self: center;
     margin-left: 60vw;
-    z-index: 2;
+    z-index: 1;
     width: 600px;
     height: 600px;
     object-fit: cover;
@@ -133,6 +131,7 @@ p {
     justify-content: center;
     height: 7.5em;
     width: 100vw;
+    max-width: 100%;
     background-color: #CDAC81;
 }
 
@@ -178,6 +177,7 @@ p {
 footer {
     height: 7.5em;
     width: 100vw;
+    max-width: 100%;
     background-color: #00303F;
     margin-top: 3em;
     display: flex;
